tests/cases/compiler-development/artifact/errors/diagnostic-match-unreachable-after-wildcard.diagnostic
diagnostic error code=T0001 family=type message="unreachable match arm after wildcard" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/match/errors/match-unreachable-after-wildcard.ari" display="tests/cases/match/errors/match-unreachable-after-wildcard.ari" bytes=151
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-unreachable-after-wildcard.ari" line=12 column=5 end_line=12 end_column=6 byte_start=116 byte_end=117 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-unreachable-after-wildcard.ari:12:5\n    |\n 12 |     B => {\n    |     ^"
